# chess

./: CMakeLists.txt  README.md  sourcelist.cmake
include/: Bishop.hpp  Board.hpp  Grid_Translator.hpp  King.hpp  Knight.hpp  Moves.hpp  Pawn.hpp  Piece.hpp  Position.hpp  Queen.hpp  Rook.hpp  game_info.hpp
src/: bishop.cpp  board.cpp  game.cpp  game_info.cpp  info.cpp  king.cpp  knight.cpp  moves.cpp  pawn.cpp  queen.cpp  rook.cpp
